; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_offsets.c_ofstSerialSize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_offsets.c_ofstSerialSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ofstSerialSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ofstSerialSize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 5
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  store i32 %7, i32* %2, align 4
  br label %24

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp eq i32 %9, 5
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 6, i32* %2, align 4
  br label %24

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = icmp slt i32 %13, 8
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 8, i32* %2, align 4
  br label %24

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  %18 = icmp slt i32 %17, 12
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 0, i32* %2, align 4
  br label %24

20:                                               ; preds = %16
  %21 = load i32, i32* %3, align 4
  %22 = sub nsw i32 %21, 12
  %23 = sdiv i32 %22, 2
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %20, %19, %15, %11, %6
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
